# bumblebee

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt  setup.py
bumblebee/: __init__.py
bumblebee.egg-info/: PKG-INFO  SOURCES.txt
bumblebee/bases/: Dataset.py  Effect.py  IEffect.py  IManager.py  Source.py  __init__.py  constants.py
bumblebee/datasets/: Batch.py  BatchReading.py  FramesAndDifferences.py  LimitedRead.py  NLimiter.py  Single.py  SingleFrame.py  StepsPerEpoch.py  StepsPerEpochProxy.py  TorchBatch.py  VideoDataset.py  __init__.py
bumblebee/effects/: CurrentFrame.py  End.py  FrameSkip.py  GoTo.py  LimitedRead.py  Loop.py  RandomSeek.py  Start.py  __init__.py
bumblebee/interfaces/: IDataset.py  IManager.py  ISource.py  __init__.py
bumblebee/managers/: BinaryClassification.py  __init__.py
bumblebee/misc/: WindowStream.py  __init__.py
bumblebee/sources/: DeviceStream.py  FileStream.py  WebStream.py  WindowStream.py  __init__.py
bumblebee/transformers/: ChannelLast.py  __init__.py
datasets/: FullStreamDataset.py  SingleFrameDataset.py  VideoDataset.py  __init__.py
docs/: DEVELOPMENT.md  PIPELINE.md
enhancers/: StepsPerEpochProxy.py  __init__.py
eyecu_bumblebee/: __init__.py
eyecu_bumblebee/video/: __init__.py
interfaces/: IEnhancer.py
not_a_bumblebee.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: eyecu.py
src/video/: __init__.py
streams/: DeviceStream.py  FileStream.py  FullStream.py  WindowStream.py
tests/: Dummy.py  test_Batch.py  test_BinaryClassification.py  test_CurrentFrame.py  test_End.py  test_FrameSkip.py  test_GoTo.py  test_LimitedRead.py  test_NLimiter.py  test_NumpyBatch.py  test_Single.py  test_Start.py  test_StartAndEnd.py  test_TorchBatch.py
tests/labels/: labels1.txt  labels2.txt  (+1 more)
transfomers/: ChannelFirst.py  FrameDownsampler.py  Normalization.py  __init__.py
(+53 files in other folders)
