[tool.poetry]
name = "eyecu-bumblebee"
version = "0.1.7"
description = "Advanced training methods on videos."
authors = ["Oguz Vuruskaner <ovuruska@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
