[tool.poetry]
name = "eyecu-bumblebee"
version = "0.5.3"
description = "Advanced pipelines for video datasets"
authors = ["Oguz Vuruskaner <ovuruska@outlook.com>"]
repository = "https://github.com/Eye-C-U/bumblebee/"
license = "MIT"
keywords = [
    "Video Processing",
    "Dataset",
    "numpy"
]
readme = "README.md"
packages = [
    { include = "bumblebee" }
]

[tool.poetry.scripts]
hi = "hello:hello"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.0"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/Eye-C-U/bumblebee/issues"